--- a/web/sites/default/default.services.yml
+++ b/web/sites/default/default.services.yml
@@ -172,3 +172,11 @@ parameters:
     maxAge: false
     # Sets the Access-Control-Allow-Credentials header.
     supportsCredentials: false
+
+services:
+    config.storage:
+        class: Drupal\Core\Config\CachedStorage
+        arguments: ['@config.storage.active', '@cache.config']
+    config.storage.active:
+        class: Drupal\Core\Config\FileStorage
+        factory: Drupal\Core\Config\FileStorageFactory::getActive
