--- a/.env.dist
+++ b/.env.dist
@@ -6,7 +6,7 @@ DRUPAL_ACCOUNT_MAIL=admin@example.com
 DRUPAL_ACCOUNT_NAME=admin
 DRUPAL_ACCOUNT_PASS=password
 DRUPAL_SITE_MAIL=admin@example.com
-DRUPAL_SITE_NAME="Foundry development"
+DRUPAL_SITE_NAME="Road-racing.pl"
 
 MYSQL_DATABASE=effdrop
 MYSQL_PASSWORD=password
