--- a/config/sync/block.block.magazine_account_menu.yml
+++ b/config/sync/block.block.magazine_account_menu.yml
@@ -1,4 +1,4 @@
-uuid: 87914be4-1b4d-4319-b0c3-d7644193b2e2
+uuid: 409d369a-4946-4ccd-9254-1068fb3debf2
 langcode: en
 status: true
 dependencies:
@@ -7,12 +7,12 @@ dependencies:
   module:
     - system
   theme:
-    - bartik
+    - magazine
 _core:
   default_config_hash: DweBpscQZdG0-fHkSpUzdYucrNH45G_KF7Z82V-oyQM
-id: bartik_account_menu
-theme: bartik
-region: secondary_menu
+id: magazine_account_menu
+theme: magazine
+region: header
 weight: 0
 provider: null
 plugin: 'system_menu_block:account'
