--- a/config/sync/block.block.magazine_page_title.yml
+++ b/config/sync/block.block.magazine_page_title.yml
@@ -1,13 +1,13 @@
-uuid: 680b5830-7bf2-42ce-93f9-9e67f38c83d8
+uuid: 470dd2ab-ffc7-4510-a413-eb867b1a134b
 langcode: en
 status: true
 dependencies:
   theme:
-    - bartik
+    - magazine
 _core:
   default_config_hash: 7rR9chwXvdM2H8OYMAYx9Zj3GGlPMrZp_M3ZA4thYTk
-id: bartik_page_title
-theme: bartik
+id: magazine_page_title
+theme: magazine
 region: content
 weight: -50
 provider: null
