--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -46,7 +46,7 @@ module:
 theme:
   stable: 0
   classy: 0
-  bartik: 0
   seven: 0
+  magazine: 0
 _core:
   default_config_hash: m2GVq11UAOVuNgj8x0t5fMOPujpvQQ_zxLoaly1BMEU
