Fix .env.dist file

--- a/.env.dist
+++ b/.env.dist
@@ -8,7 +8,7 @@ DRUPAL_ACCOUNT_PASS=password
 DRUPAL_SITE_MAIL=admin@example.com
 DRUPAL_SITE_NAME="Road-racing.pl"
 
-MYSQL_DATABASE=effdrop
+MYSQL_DATABASE=drupal
 MYSQL_PASSWORD=password
 MYSQL_ROOT_PASSWORD=password
 MYSQL_USER=user
