Enable magazine theme and admin_toolbar module

--- a/config/sync/language.negotiation.yml
+++ b/config/sync/language.negotiation.yml
@@ -3,7 +3,9 @@ session:
 url:
   source: path_prefix
   prefixes:
-    pl: ''
+    pl: pl
+    en: ''
+    '': null
   domains:
     pl: ''
 selected_langcode: site_default
