--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,10 @@
         "drupal/core": "~8.0",
         "drush/drush": "~8.0",
         "drupal/console": "~1.0",
-        "drupal/admin_toolbar": "^1.18"
+        "drupal/admin_toolbar": "^1.18",
+        "drupal/ctools": "^3.0@alpha",
+        "drupal/pathauto": "^1.0@beta",
+        "drupal/video_embed_field": "^1.3"
     },
     "require-dev": {
         "behat/mink": "~1.7",
