--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "drupal/admin_toolbar": "^1.18",
         "drupal/ctools": "^3.0@alpha",
         "drupal/pathauto": "^1.0@beta",
-        "drupal/video_embed_field": "^1.3"
+        "drupal/video_embed_field": "^1.3",
+        "drupal/google_analytics": "^2.1"
     },
     "require-dev": {
         "behat/mink": "~1.7",
